@@ -1,3 +1,9 @@
+2008-09-04  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclExecute.c (CACHE_STACK_INFO): 
+	* tests/unsupported.test:  restore the execEnv's bottomPtr, fix
+	for [Bug 2093188]. 
+
 2008-09-02  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tcl.h:	Stripped "callers" of the _ANSI_ARGS_ macro
